<resources>

    <string name="app_name">Grade Tracker</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="class_val">Class</string>
    <string name="database">Database</string>
    <string name="email">Email:</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="registration">New User</string>
    <string name="type_decision">Are you a</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="enter_username">Enter your username:</string>
    <string name="enter_password">Enter your password:</string>
    <string name="incorrectLogin">You entered your username/password incorrectly %d times</string>
    <string name="class_list">UserName\'s Classes</string>
    <string name="addButton">Add %1$s to %2$s</string>
    <string name="btnAddDesc">Button that changes according to if the list is expanded or not.</string>
    <string name="class_name">Class Name:</string>
    <string name="semester">Semester:</string>
    <string name="empty_user">There are no users saved. Must sign up first.</string>
    <string name="phone_number">Phone Number:</string>
    <string name="failed_login">Failed to Login</string>
    <string name="send">Send username/password</string>
    <string name="send_text">Text</string>
    <string name="send_email">Email</string>
    <string name="sent_text">Sent text to %s</string>
    <string name="sent_email">Sent email to %s</string>
    <string name="failed_to_send">Chose to close. Did not send message or email</string>
    <string name="failed_to_find_user">Username nor password can be found in database.</string>
    <string name="no_sms">No messaging app available</string>
    <string name="no_email">No email app available</string>
    <string name="empty_login">Either username or password is empty</string>
    <string name="grade">Grade %</string>
    <string name="student_name">Student Name:</string>
    <string name="current_grade">Your current grade is %s</string>
    <string name="no_students">No students in class. Please create a student</string>
    <string name="grading_category">Grade Category:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="no_class_title">Class Name text field is empty</string>
    <string name="empty_name_string">Either last name or first name text field is empty</string>
    <string name="add_grade">Add Grade</string>
    <string name="view_all_grades">View All</string>
    <string name="grade_overview_title">Grade Overview %1$s %2$s %3$s</string>
    <string name="no_categories">No grades/categories found for user or student</string>
    <string name="logout_title">Logout?</string>
    <string name="logout_message">Are you sure you wish to logout?</string>
    <string name="logout">Logout</string>
    <string name="grade_percentage">Percentage</string>
    <string name="grade_overall">Overall</string>
    <string name="final_grade">Final Grade</string>
    <string name="full_percentage">1</string>
    <string name="grade_type">Grade Type:</string>
    <string name="earned_grade">Points Earned:</string>
    <string name="possible_grade">Points Possible:</string>
    <string name="percent_grade">Percentage:</string>
    <string name="new_category">New Category</string>
    <string name="new_category_name">Category Name:</string>
    <string name="grade_zero">0.0</string>
    <string name="empty_new_category">Please enter a name for the new category</string>
    <string name="grade_breakdown">Grade Breakdown</string>
    <string name="radio_warning">Please select either Teacher or Student</string>
    <string name="fail_overview">Can\'t load Final Grade; select a category</string>
    <string name="grade_desired">Grade Desired:</string>
    <string name="incorrect_desired_grade">Please enter a desired grade between 0.0 and 100.0</string>
    <string name="no_selected_class">Please select a class</string>
    <string name="incorrect_possible_grade">Please enter a possible grade greater than 0.0</string>
    <string name="class_grade_is_zero">Cannot calculate future grade of a class which has no grades added.</string>
    <string name="future_title">Future Grade</string>
    <string name="desired_message">The grade you need is:</string>
	<string name="gpa_calculator">Calculate Your GPA</string>
	<string name="hint_credits">Credits</string>
	<string name="scaled">Scaled</string>
	<string name="unscaled">Not Scaled</string>
	<string name="existing_users">User already exists. Please choose a different name.</string>
	<string name="valid_characters">Valid characters: A-Z, a-z, 0-9, !_,.#$%@ &amp;</string>
	<string name="invalid_characters">Username/Password contains invalid characters.</string>
	<string name="edit">Edit</string>
	<string name="rbWhole">A|B</string>
	<string name="rbPlus">A|B+</string>
	<string name="rbPlusMinus">A|A-|B+</string>
	<string name="rb_scale_type_warning">Must select a grade scale type.</string>
	<string name="upper_percentage_limit">Percentage must be less than %s%%</string>
	<string name="lower_percentage_limit">Percentage must be greater than 0.0%% but less than %s%%</string>
	<string name="cannot_enter_percents">Sorry, but you have reached 100%. Cannot enter more than 100%</string>
	<string name="no_selected_gpa">No classes selected. Please select at least 1 class from the list</string>
	<string name="no_selected_future">Class was not selected. Please select a class from the list</string>
	<string name="empty_fgc_field">Grade Desired or Possible Grade is empty</string>
	<string name="grade_earned_add_empty">Grade earned is empty</string>
	<string name="grade_possible_add_empty">Grade possible is empty</string>
	<string name="home_pressed_logout">You have been logged out of Grade Tracker</string>
	<string name="edit_class">Edit Class</string>
	<string name="delete_class">Delete Class</string>
	<string name="delete_grades">Delete All Grades</string>
	<string name="edit_student">Edit Student</string>
	<string name="delete_student">Delete Student</string>
	<string name="error_purchase">Error purchasing. Try again.</string>
	<string name="not_implemented_for_student">Cannot be used by a Student user.</string>
	<string name="cannot_delete">Unable to delete. No grades in the list.</string>
	<string name="settings">Settings</string>
	<string name="user_update_done">User info updated successful</string>
	<string name="about">About</string>
</resources>