<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_port" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/txtUsername"
            style="@style/TextColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.20"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editUsername"
            style="@style/TextColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:ems="10"
            android:inputType="textAutoComplete|textAutoCorrect" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/txtPassword"
            style="@style/TextColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.20"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editPassword"
            style="@style/TextColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:ems="10"
            android:inputType="textAutoComplete|textAutoCorrect|textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/txtEmail"
            style="@style/TextColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.13"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/editEmail"
            style="@style/TextColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textAutoComplete|textAutoCorrect" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imgBtnFinalize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/chalkboard"
        android:src="@drawable/finalize" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout3" >

        <TextView
            android:id="@+id/txtPhoneNumber"
            style="@style/TextColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.13"
            android:text="@string/phone_number"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/editPhoneNumber"
            style="@style/TextColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="phone" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout4"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" >

        <TextView
            android:id="@+id/txtDecision"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="26dp"
            android:text="@string/type_decision"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioButton
            android:id="@+id/radioStudent"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDecision"
            android:layout_marginLeft="28dp"
            android:layout_toRightOf="@+id/txtDecision"
            android:text="@string/student" />

        <RadioButton
            android:id="@+id/radioTeacher"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtDecision"
            android:layout_alignLeft="@+id/radioStudent"
            android:text="@string/teacher" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        style="@style/TextColor"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="14dp"
        android:text="@string/valid_characters"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!-- !&#_,.$%@ -->
</RelativeLayout>